Fixed More Layout Issues. Fixed Navbar issues.

--- a/styles/home.css
+++ b/styles/home.css
@@ -15,6 +15,10 @@
     line-height: 1.4;
 }
 
+.main-container {
+  margin-top: 150px; /* Add a top margin to avoid content overlay */
+}
+
 li, a, button {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
@@ -36,6 +40,14 @@ li, a, button {
   align-items: center;
   padding-left: 20px;
   padding-right: 20px;
+}
+
+.sticky {
+  position: fixed;
+  top:0;
+  width: 100%;
+  /* VERY IMPORTANT. z-index specifies how content is stacked on top. */
+  z-index: 1000;
 }
 
 .logo {
@@ -139,4 +151,17 @@ h1 {
 
 .article-card {
   margin-bottom:24px;
+}
+
+/* media query for when screen width goes below 600px */
+@media only screen and (max-width: 600px) {
+  .profile-nav-bar {
+      /* for unordered list, reduce font-size * padding to 0 */
+      font-size: 0.5em;
+      padding-left: 0;
+  }
+
+  .svg-icon {
+    margin-right: 0;
+  }
 }
